force-app/main/default/objects/DevOpsObject__c/DevOpsObject__c.object-meta.xml
<CustomObject
     >
    <historyRetentionPolicy n1:nil="true" />
    <label>DevOpsObject</label>
    <nameField>
        <label>DevOpsObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DevOpsObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>