force-app/main/default/objects/DevOpsObject__c/fields/Field_Four__c.field-meta.xml
<CustomField>
    <fullName>Field_Four__c</fullName>
    <label>Field Four</label>
    <length>100</length>
    <type>Text</type>
</CustomField>