force-app/main/default/objects/DevOpsObject__c/fields/Field_Three__c.field-meta.xml
<CustomField>
    <fullName>Field_Three__c</fullName>
    <label>Field Three</label>
    <length>50</length>
    <type>Text</type>
</CustomField>