force-app/main/default/objects/DevOpsObject__c/fields/FieldOne__c.field-meta.xml
<CustomField>
    <fullName>FieldOne__c</fullName>
    <label>FieldOne</label>
    <length>50</length>
    <type>Text</type>
</CustomField>