force-app/main/default/objects/DevOpsObject__c/fields/FieldTwo__c.field-meta.xml
<CustomField>
    <fullName>FieldTwo__c</fullName>
    <label>FieldTwo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>